# voxel-world-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: clippy-check.yml  nightly-lints.yml
src/: camera.rs  lib.rs  main.rs  terrain.rs  voxel.rs
